banner para short

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
             <div class="row justify-content-center">
               <div class="col-10">
                 <h5 class="fs-1" style=" font-weight: 400;">Welcome to City Inn Ltd.</h5>
-                <p class="d-none d-md-block">City Inn Ltd. is the most modern facilitated international standard hotel and holds a prime location and booming area in Khulna City the southern part of Bangladesh offer all the luxuries, comfort and personal coziness with adequate services of our skilled male and female young energetic team with warm hospitality in the traditional way, inviting atmosphere and premier service sources to satisfy business leisure travelers alike. City Inn also comes to offering the multi cuisine and local favorites with 2 numbers peerless wide sight viewing modern architected elegant restaurant are committed to serve the quality, freshness and delicious dishes for your exotic test. Buffet parties are available musical waves and selective movie may take you all to the hub of amusement.</p>
+                <p class="d-none d-md-block">
+                  City Inn Ltd. is the most modern facilitated international standard hotel and holds a prime location and booming area in Khulna City the southern part of Bangladesh offer all the luxuries, comfort and personal coziness with adequate services of our skilled male and female young energetic team with warm hospitality in the traditional way, inviting atmosphere and premier service sources to satisfy business leisure travelers alike. 
+                  <!-- City Inn also comes to offering the multi cuisine and local favorites with 2 numbers peerless wide sight viewing modern architected elegant restaurant are committed to serve the quality, freshness and delicious dishes for your exotic test. Buffet parties are available musical waves and selective movie may take you all to the hub of amusement. -->
+                </p>
               </div>
             </div>
             
