--- a/room.html
+++ b/room.html
@@ -15,7 +15,7 @@
     <!-- AOS CSS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
 
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./main.css">
   
 <style>
   
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">
-          <img src="./assets/img/logo.jpg" alt="...">
+          <img src="./logo.jpg" alt="...">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -283,7 +283,7 @@
         <div class="row">
           <div class="col-md-3">
             <a class="navbar-brand" href="#">
-              <img src="./assets/img/logo.jpg" class="rounded" alt="...">
+              <img src="./logo.jpg" class="rounded" alt="...">
             </a>
             NEWSLETTER
           </div>
